2007-05-16  Richard Sandiford  <richard@codesourcery.com>

	* configure.in: Allow sysroots to be relocated under $prefix as
	well as $exec_prefix.
	* configure: Regenerate.

2007-05-14  Andreas Schwab  <schwab@suse.de>

	* emultempl/ppc64elf.em (gld${EMULATION_NAME}_new_vers_pattern):
	Handle null pattern.

2007-05-11  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc32elf.em (plt_style): New variable.
	(old_plt): Delete.
	(ppc_after_open): Adjust ppc_elf_select_plt_layout call.
	(PARSE_AND_LIST_PROLOGUE): Define OPTION_NEW_PLT, renumber
	OPTION_OLD_PLT, OPTION_OLD_GOT and OPTION_STUBSYMS.
	(PARSE_AND_LIST_LONGOPTS, PARSE_AND_LIST_OPTIONS): Add secure-plt.
	(PARSE_AND_LIST_ARGS_CASES): Handle OPTION_NEW_PLT.
	* ld.texinfo (--secure-plt): Document.

2007-05-08  Alan Modra  <amodra@bigpond.net.au>

	* ld.h (args_type, ld_config_type): Reorder fields.
	* ldmain.c (main): Don't initialise a bunch of vars we know are
	zero already.

2007-05-05  Anatoly Sokolov <aesok@post.ru>

	* multempl/avrelf.em (PARSE_AND_LIST_ARGS_CASES): Add new value for 
	"--pmem-wrap-around".
	(PARSE_AND_LIST_OPTIONS): Describe new value for "--pmem-wrap-around".

2007-05-03  Bob Wilson  <bob.wilson@acm.org>

	* scripttempl/elfxtensa.sc: Merge changes from elf.sc.

2007-05-03  Alan Modra  <amodra@bigpond.net.au>

	* ld.texinfo (--no-warn-search-mismatch): Document.
	* ldfile.c (ldfile_try_open_bfd): Don't warn about skipping
	incompatible libraries if --no-warn-search-mismatch.
	* ld.h (args_type): Add warn_search_mismatch.
	* ldmain.c (main): Init it.
	* lexsup.c (enum option_values): Add OPTION_NO_WARN_SEARCH_MISMATCH.
	(ld_options): Add entry for --no-warn-search-mismatch.
	(parse_args): Handle OPTION_NO_WARN_SEARCH_MISMATCH.

2007-05-03  Alan Modra  <amodra@bigpond.net.au>

	* scripttempl/elf.sc: Add .debug_pubtypes and .debug_ranges.

2007-05-01  Robert Millan  <rmh@aybabtu.com>

	* ldlang.c (lang_check): Error on architecture mismatch.

2007-04-30  Alan Modra  <amodra@bigpond.net.au>
